# MATA

./: .env.example  .gitignore  CITATION.cff  README.md  pixi.toml  pyproject.toml
configs/: gqa.yaml  refcoco.yaml
scripts/: infer_dataset.py  infer_once.py
scripts/eval_data/: exp_datasets.py
src/mata/: __init__.py  download_model.py  llm.py
src/mata/agent/: __init__.py  base.py  hyper_agent.py  mata.py
src/mata/agent/answering/: __init__.py  agent.py  final_answerer.py  summarizer.py
src/mata/agent/automaton/: __init__.py  state.py  state_controller_prompter.py  transitions.py
src/mata/agent/oneshot/: __init__.py  agent.py  generator.py
src/mata/agent/specialized/: __init__.py  agent.py  specialist.py  verifier.py
src/mata/agent/stepwise/: __init__.py  agent.py  code_generator.py  instruction_generator.py
src/mata/agent/verifier/: __init__.py  base.py  code.py  xml.py
src/mata/execution/: image_patch.py  python.py  toolbox.py
src/mata/memory/: __init__.py  shared_memory.py
src/mata/prompt/: code_api.py
src/mata/prompt/answering/: answerer_example.py
src/mata/prompt/oneshot/: code_example.py  task.py
src/mata/prompt/stepwise/: code_example.py  code_task.py  instruction.py  instruction_example.py  instruction_task.py
src/mata/tool/: __init__.py  _base.py  depth_anything.py  florence.py  grounding_dino.py  internvl.py  xvlm.py
src/mata/tool/model/xvlm/: config_bert.json  xbert.py  xvlm.py
src/mata/util/: config.py  misc.py
