[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mata"
version = "0.1.0"
description = "Official inference implementation for MATA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ControlNet", email = "smczx@hotmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mata*"]

[tool.setuptools.package-data]
mata = ["assets/*", "prompt/**", "tool/model/xvlm/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", "**/__pycache__/*"]
